Creación de los repositorios e insertando datos de prueba en la base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 #Para mostrar los sql por consola
 spring.jpa.show-sql=true
 #para que muestre en formato sql
-spring.jpa.properties.hibernate.format_sql
+spring.jpa.properties.hibernate.format_sql=true
 
