Creación del controller CitaController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 #para que muestre en formato sql
 spring.jpa.properties.hibernate.format_sql=true
 
+
+#para cuando tenemos el error circular de las dependencias
+spring.main.allow-circular-references=true
+
